--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,50 @@
-/home/raiden/programming/AdvectionDiffusion3D/cmake/.gitignore.in
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# cmake builds
+cmake-*
+
+# IDE
+.idea
+
+# vim
+*.sw*
+
+# sym-links added by cmake
+CMakePresets.json
+IgnoreWarning.h
+.pre-commit-config.yaml
+.clang-format
+.clang-tidy
+.gitignore
+build.py
