--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ project(pde)
 
 include(${CMAKE_SOURCE_DIR}/cmake/All.cmake)
 
+find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 add_subdirectory(Pde)
 add_subdirectory(UnitTests)
